2008-11-02  Johannes Schmid  <jhs@gnome.org>

	* libanjuta/anjuta-vcs-status.h:
	Fixed docs
	
	* libanjuta/interfaces/anjuta-idl-compiler.pl:
	Corrected generation of signal documentation
	
	* libanjuta/interfaces/libanjuta.idl:
	* manuals/reference/libanjuta/libanjuta-sections.txt:
	Added documentation

	* plugins/symbol-db/plugin.c (symbol_db_activate):
	Don't use g_warning for debug messages

2008-11-01  Ignacio Casal Quinteiro  <nacho.resa@gmail.com>

	* libanjuta/anjuta-debug.h:
	Added DEBUG_PRINTF macro.
	
	Fixes bug #558788

2008-10-25  Johannes Schmid  <jhs@gnome.org>

	Patch by: Jens Georg <mail@jensge.org>

	* libanjuta/anjuta-utils.c:
	* libanjuta/anjuta-utils.h:
	* plugins/build-basic-autotools/executer.c
	(get_program_parameters), (execute_program):
	* plugins/build-basic-autotools/plugin.c
	(value_added_pm_current_uri), (ibuilder_is_built),
	(ibuilder_build):
	* plugins/class-gen/generator.c (cg_generator_make_absolute):
	* plugins/class-gen/plugin.c (project_root_added):
	
	#511589 – Anjuta uses GNOME-VFS

2008-10-25  Johannes Schmid  <jhs@gnome.org>

	Patch by: Jens Georg <mail@jensge.org>

	* plugins/file-loader/plugin.c (launch_application_failure),
	(get_supertype_from_mime_type), (get_available_plugins_for_mime),
	(open_with_dialog), (launch_in_default_application), (open_file),
	(on_open_recent_file_idle), (on_open_recent_file),
	(open_file_with), (create_open_with_submenu),
	(hide_fragment_identifier), (iloader_load):
	
	#511589 – Anjuta uses GNOME-VFS

2008-10-25  Massimo Cora'  <mcora@svn.gnome.org>

	* plugins/symbol-db/plugin.c
	(on_editor_buffer_symbols_update_timeout),
	(on_project_element_added), (on_project_element_removed),
	(do_import_system_src_after_abort),
	(do_import_project_src_after_abort), (do_import_project_sources),
	(on_project_root_added):
	* plugins/symbol-db/symbol-db-engine-iterator-node.c:
	* plugins/symbol-db/symbol-db-engine.c
	(symbol_db_engine_update_project_symbols):
	* plugins/symbol-db/symbol-db-engine.h: