@@ -95,7 +95,7 @@ on_cvs_mesg_parse (IAnjutaMessageView *view, const gchar *line,
 	
 	if ((filename = parse_filename (line)))
 	{
-		gchar *uri;
+		GFile *file;
 		IAnjutaFileLoader *loader;
 		
 		/* Go to file and line number */
@@ -103,9 +103,9 @@ on_cvs_mesg_parse (IAnjutaMessageView *view, const gchar *line,
 											 NULL);
 		
 		/* FIXME: Determine full file path */
-		uri = gnome_vfs_get_uri_from_local_path(filename);
+		file = g_file_new_for_path (filename);
 		ianjuta_file_loader_load (loader, uri, FALSE, NULL);
-		g_free (uri);
+		g_object_unref (file);
 		g_free (filename);
 	}
 #endif
